<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forecastActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icono_logo" />

            <TextView
                android:id="@+id/tdate"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal|center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_2"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:freezesText="?android:attr/windowOverscan"
                android:gravity="center_horizontal|center"
                android:padding="5dp"
                android:text="@string/Parameters_weathers"
                android:textColor="@android:color/background_dark"
                android:textIsSelectable="false"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="@string/Time"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <Spinner
                    android:id="@+id/horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="@string/Deg"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <TextView

                    android:id="@+id/lblDeg"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnCompass"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/compass"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="Speed"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/lblSpeed"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="511dp">

                <TextView

                    android:id="@+id/textView2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="Current"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/lblCurrent"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/textView4"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="@string/Max"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/lblMax"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/textView6"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="@string/Min"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/lblMin"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="248dp"
                tools:layout_editor_absoluteY="162dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:text="Weather"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    tools:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/lblWeather"
                    android:layout_width="120dp"
                    android:layout_height="30dp" />

                <ImageView
                    android:id="@+id/imgWeather"
                    android:layout_width="58dp"
                    android:layout_height="58dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnStatistical"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:background="@android:color/holo_blue_dark"
                android:text="View Statistical Next 12 hours"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnMaps"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:background="@android:color/holo_blue_dark"
                android:text="View Google Maps"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>